[Issue #409] Adjusted the styling to align the buttons.

--- a/comixed-frontend/src/app/app.component.css
+++ b/comixed-frontend/src/app/app.component.css
@@ -1,23 +1,33 @@
-:host ::ng-deep #comixed-footer {
-	position: fixed;
-	bottom: 0px;
-	width: 100%;
-	z-index: 102;
-	background-color: #eeeeee;
-	color: #212121;
+:host >>> #comixed-footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    z-index: 102;
+    background-color: #eeeeee;
+    color: #212121;
 }
 
-:host ::ng-deep .selected-comic {
-  filter: opacity(50%);
-  border: 1px solid 0xff0000;
+:host >>> .selected-comic {
+    filter: opacity(50%);
+    border: 1px solid 0 xff0000;
 }
 
 :host >>> .cx-alerts .ui-toast-message-info {
-	background-color: #FFFF00;
-	color: #000000;
+    background-color: #FFFF00;
+    color: #000000;
 }
 
 :host >>> .cx-alerts .ui-toast-message-error {
-	background-color: #B22222;
-	color: #000000;
+    background-color: #B22222;
+    color: #000000;
+}
+
+:host >>> .cx-button-box-vertical {
+    width: 100%;
+    text-align: center;
+}
+
+:host >>> .cx-selection-button {
+    width: 75%;
+    margin-top: 1px;
 }
